--- a/index.html
+++ b/index.html
@@ -10,42 +10,43 @@
 <style>
 body{
   margin:0;
-  font-family:'Poppins',sans-serif;
-  text-align:center;
-  background:linear-gradient(160deg,#ffb6d9,#ffd6eb);
-  overflow:hidden;
-  transition:background 0.4s ease;
-}
-
-.page{
   min-height:100vh;
   display:flex;
-  flex-direction:column;
   justify-content:center;
   align-items:center;
-  padding:20px;
+  background:linear-gradient(160deg,#ffb6d9,#ffd6eb);
+  font-family:'Poppins',sans-serif;
+  text-align:center;
+  overflow:hidden;
+  transition:background 0.6s ease;
+}
+
+#container{
+  width:100%;
+  max-width:520px;
 }
 
 .card{
-  width:100%;
-  max-width:520px;
   background:rgba(255,255,255,0.15);
   backdrop-filter:blur(15px);
   padding:35px;
   border-radius:30px;
   box-shadow:0 20px 50px rgba(0,0,0,0.15);
+  position:relative;
 }
 
 h1{
   font-family:'Playfair Display',serif;
   color:white;
   font-size:clamp(28px,6vw,42px);
+  margin-bottom:20px;
 }
 
 .love-text{
   font-family:'Playfair Display',serif;
   font-size:clamp(26px,5vw,38px);
   color:#ff2e88;
+  margin-bottom:10px;
 }
 
 button{
@@ -54,7 +55,8 @@ button{
   border-radius:40px;
   font-size:18px;
   cursor:pointer;
-  margin:8px;
+  margin:5px;
+  transition:0.25s ease;
 }
 
 .yes{
@@ -67,22 +69,22 @@ button{
   color:white;
 }
 
-img{
-  width:100%;
-  max-height:50vh;
-  object-fit:cover;
-  border-radius:25px;
-  margin:20px 0;
-}
-
 .pulse{
-  animation:pulse 1.6s infinite;
+  animation:pulse 1.8s infinite;
 }
 
 @keyframes pulse{
   0%{transform:scale(1);}
   50%{transform:scale(1.08);}
   100%{transform:scale(1);}
+}
+
+#mainPhoto,#finalPhoto{
+  width:100%;
+  max-height:50vh;
+  object-fit:cover;
+  border-radius:25px;
+  margin-bottom:20px;
 }
 
 .floating-heart{
@@ -118,36 +120,25 @@ img{
 
 <body>
 
-<div id="app"></div>
+<div id="container">
+  <div class="card">
+    <img src="envelope.png.jpg" width="220" onclick="openLetter()" style="cursor:pointer;">
+    <h1>For Alya💗💌</h1>
+    <button class="yes pulse" onclick="openLetter()">Open</button>
+  </div>
+</div>
 
 <script>
 
-let currentPage="start";
 let heartInterval, confettiInterval, roseInterval;
+let currentPage = "question";
 
-renderStart();
-
-function renderStart(){
-  document.body.style.overflow="hidden";
-  document.body.style.background="linear-gradient(160deg,#ffb6d9,#ffd6eb)";
-  document.getElementById("app").innerHTML=`
-    <div class="page">
-      <div class="card">
-        <img src="envelope.png.jpg" width="220" onclick="renderQuestion()" style="cursor:pointer;">
-        <h1>For Alya💗💌</h1>
-        <button class="yes pulse" onclick="renderQuestion()">Open</button>
-      </div>
-    </div>
-  `;
-}
-
-function renderQuestion(){
-  currentPage="question";
-  document.getElementById("app").innerHTML=`
-    <div class="page">
-      <div class="card">
-        <img src="mainphoto.jpg">
-        <h1>Will you be my Valentine? 💖</h1>
+function openLetter(){
+  document.getElementById("container").innerHTML=`
+    <div class="card">
+      <img id="mainPhoto" src="mainphoto.jpg">
+      <h1>Will you be my Valentine? 💖</h1>
+      <div>
         <button class="yes" id="yesBtn">Yes 💕</button>
         <button class="no" id="noBtn">No 😢</button>
       </div>
@@ -172,7 +163,7 @@ function setupButtons(){
   let index=0;
   let scale=1;
 
-  noBtn.onclick=function(){
+  noBtn.addEventListener("click",function(){
     if(index<messages.length){
       noBtn.textContent=messages[index++];
     }else{
@@ -180,135 +171,158 @@ function setupButtons(){
     }
 
     scale+=0.35;
-    yesBtn.style.transform=`scale(${scale})`;
+    yesBtn.style.transform="scale("+scale+")";
 
     noBtn.style.position="absolute";
     noBtn.style.left=Math.random()*70+"%";
     noBtn.style.top=Math.random()*60+"%";
-  };
+  });
 
-  yesBtn.onclick=renderFinal;
+  yesBtn.addEventListener("click",loadFinalPage);
 }
 
-function renderFinal(){
+function loadFinalPage(){
   currentPage="final";
-  document.body.style.overflow="auto";
-  document.body.style.background="linear-gradient(160deg,#ffb6d9,#ffd6eb)";
 
-  document.getElementById("app").innerHTML=`
-    <div class="page">
-      <div class="card">
-        <div class="love-text">Love you💕</div>
-        <h1>You had no choice anw 😌💞<br><br>Guess we have plans now 😁</h1>
-        <img src="finalphoto.jpg.jpg">
-        <p style="color:white;font-weight:600;">Scroll down ↓</p>
-      </div>
+  document.body.style.overflowY="auto";
+  document.body.style.alignItems="flex-start";
+  window.scrollTo(0,0);
+
+  document.getElementById("container").innerHTML=`
+    <div class="card">
+      <div class="love-text">Love you💕</div>
+      <h1>You had no choice anw 😌💞<br><br>Guess we have plans now 😁</h1>
+      <img id="finalPhoto" src="finalphoto.jpg.jpg">
+      <p style="color:white;font-weight:600;">Scroll down ↓</p>
     </div>
-    <div style="height:600px;"></div>
   `;
 
   startHearts();
   startConfetti();
+
+  window.addEventListener("scroll", detectScrollToBouquet);
 }
 
-window.addEventListener("scroll",()=>{
-  if(currentPage==="final" && window.scrollY>250){
-    renderBouquet();
+function detectScrollToBouquet(){
+  if(currentPage==="final" && window.scrollY > 120){
+    window.removeEventListener("scroll", detectScrollToBouquet);
+    loadBouquetPage();
   }
-  if(currentPage==="bouquet" && window.scrollY<50){
-    renderFinal();
-  }
-});
+}
 
-function renderBouquet(){
+function loadBouquetPage(){
+
   currentPage="bouquet";
 
   clearInterval(heartInterval);
   clearInterval(confettiInterval);
-  clearInterval(roseInterval);
-  document.querySelectorAll(".floating-heart,.confetti-piece").forEach(e=>e.remove());
+  document.querySelectorAll(".floating-heart,.confetti-piece").forEach(el=>el.remove());
 
   document.body.style.background="black";
+  window.scrollTo(0,0);
 
-  document.getElementById("app").innerHTML=`
-    <div class="page">
-      <div class="card" style="background:transparent;box-shadow:none;">
-        <h1 style="color:#ff4d9e;">Heres ur flowers (sorry there not real)❤️</h1>
-        <p style="color:#ff4d9e;font-weight:600;">Scroll up ↑</p>
-        <img id="bouquetImg" src="bouquet.jpg" style="cursor:pointer;">
-      </div>
+  document.getElementById("container").innerHTML=`
+    <div style="padding:60px 20px;">
+      <h1 style="color:#ff4d9e;">
+        Heres ur flowers (sorry there not real)❤️
+      </h1>
+      <p style="color:#ff4d9e;margin-top:-10px;">Scroll up ↑</p>
+
+      <img id="bouquetImg"
+           src="bouquet.jpg"
+           style="width:100%;max-width:450px;border-radius:25px;cursor:pointer;margin-top:30px;">
+      <p style="color:#ff4d9e;margin-top:15px;">
+        Tap the flowers 💌
+      </p>
     </div>
-    <div style="height:600px;"></div>
   `;
 
-  document.getElementById("bouquetImg").onclick=openLetterOverlay;
+  document.getElementById("bouquetImg").addEventListener("click",openLoveLetter);
 
   startRoseShower();
+
+  window.addEventListener("scroll", function(){
+    if(currentPage==="bouquet" && window.scrollY < 20){
+      location.reload();
+    }
+  });
 }
 
 function startHearts(){
   heartInterval=setInterval(()=>{
-    const h=document.createElement("div");
-    h.className="floating-heart";
-    h.innerHTML="💖";
-    h.style.left=Math.random()*100+"vw";
-    h.style.animationDuration="6s";
-    document.body.appendChild(h);
-    setTimeout(()=>h.remove(),6000);
-  },700);
+    const heart=document.createElement("div");
+    heart.className="floating-heart";
+    heart.innerHTML="💖";
+    heart.style.left=Math.random()*100+"vw";
+    heart.style.animationDuration=(5+Math.random()*2)+"s";
+    document.body.appendChild(heart);
+    setTimeout(()=>heart.remove(),7000);
+  },800);
 }
 
 function startConfetti(){
   const colors=["#ff2e88","#ffffff","#ffb6d9"];
   confettiInterval=setInterval(()=>{
-    const c=document.createElement("div");
-    c.className="confetti-piece";
-    c.style.left=Math.random()*100+"vw";
-    c.style.backgroundColor=colors[Math.floor(Math.random()*colors.length)];
-    c.style.animationDuration="6s";
-    document.body.appendChild(c);
-    setTimeout(()=>c.remove(),6000);
+    const piece=document.createElement("div");
+    piece.className="confetti-piece";
+    piece.style.left=Math.random()*100+"vw";
+    piece.style.backgroundColor=colors[Math.floor(Math.random()*colors.length)];
+    piece.style.animationDuration=(5+Math.random()*2)+"s";
+    document.body.appendChild(piece);
+    setTimeout(()=>piece.remove(),7000);
   },800);
 }
 
 function startRoseShower(){
   roseInterval=setInterval(()=>{
-    const r=document.createElement("div");
-    r.innerHTML="🌹";
-    r.style.position="fixed";
-    r.style.top="-30px";
-    r.style.left=Math.random()*100+"vw";
-    r.style.fontSize="24px";
-    r.style.animation="roseFall 8s linear forwards";
-    document.body.appendChild(r);
-    setTimeout(()=>r.remove(),8000);
-  },1200);
+    const rose=document.createElement("div");
+    rose.innerHTML="🌹";
+    rose.style.position="fixed";
+    rose.style.top="-30px";
+    rose.style.left=Math.random()*100+"vw";
+    rose.style.fontSize="22px";
+    rose.style.animation="roseFall 8s linear forwards";
+    document.body.appendChild(rose);
+    setTimeout(()=>rose.remove(),9000);
+  },1500);
 }
 
-function openLetterOverlay(){
+function openLoveLetter(){
   const overlay=document.createElement("div");
   overlay.style.position="fixed";
-  overlay.style.inset="0";
-  overlay.style.background="rgba(0,0,0,0.8)";
+  overlay.style.top="0";
+  overlay.style.left="0";
+  overlay.style.width="100%";
+  overlay.style.height="100%";
+  overlay.style.background="rgba(0,0,0,0.75)";
   overlay.style.display="flex";
-  overlay.style.alignItems="center";
   overlay.style.justifyContent="center";
+  overlay.style.alignItems="center";
   overlay.style.zIndex="9999";
 
   overlay.innerHTML=`
     <div style="
       width:90%;
       max-width:450px;
-      background:white;
-      padding:40px;
+      background:#fff;
+      padding:40px 30px;
       border-radius:20px;
       border:8px solid #ff4d9e;
+      box-shadow:0 0 50px rgba(255,77,158,0.6);
       font-family:'Playfair Display',serif;
-      position:relative;">
-      <div style="position:absolute;top:10px;right:15px;cursor:pointer;font-size:22px;"
-           onclick="this.closest('div').parentElement.remove()">✕</div>
-      <h2 style="color:#ff2e88;text-align:center;">For You 💗</h2>
-      <p style="line-height:1.7;">
+      color:#333;
+      position:relative;
+    ">
+      <div style="position:absolute;right:15px;top:10px;cursor:pointer;font-size:22px;font-weight:bold;"
+           onclick="this.parentElement.parentElement.remove()">
+        ✕
+      </div>
+
+      <h2 style="color:#ff2e88;text-align:center;margin-bottom:20px;">
+        For You 💗
+      </h2>
+
+      <p style="line-height:1.7;font-size:17px;">
         Dear Alya,<br><br>
         (Write your real message here.)<br><br>
         Love,<br>
@@ -316,6 +330,7 @@ function openLetterOverlay(){
       </p>
     </div>
   `;
+
   document.body.appendChild(overlay);
 }
 
