--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ body{
   border-radius:30px;
   box-shadow:0 20px 50px rgba(0,0,0,0.15);
   position:relative;
+  transition:all 0.4s ease;
 }
 
 h1{
@@ -47,6 +48,7 @@ h1{
   font-size:clamp(26px,5vw,38px);
   color:#ff2e88;
   margin-bottom:10px;
+  animation:breathe 2.5s ease-in-out infinite;
 }
 
 button{
@@ -56,7 +58,7 @@ button{
   font-size:18px;
   cursor:pointer;
   margin:5px;
-  transition:0.25s ease;
+  transition:all 0.3s ease;
 }
 
 .yes{
@@ -69,22 +71,30 @@ button{
   color:white;
 }
 
-.pulse{
-  animation:pulse 1.8s infinite;
-}
-
-@keyframes pulse{
-  0%{transform:scale(1);}
-  50%{transform:scale(1.08);}
-  100%{transform:scale(1);}
-}
-
 #mainPhoto,#finalPhoto{
   width:100%;
   max-height:50vh;
   object-fit:cover;
   border-radius:25px;
   margin-bottom:20px;
+}
+
+@keyframes breathe{
+  0%{transform:scale(1);}
+  50%{transform:scale(1.05);}
+  100%{transform:scale(1);}
+}
+
+@keyframes floatUp{
+  to{transform:translateY(-120vh);opacity:0;}
+}
+
+@keyframes fall{
+  to{transform:translateY(120vh) rotate(360deg);}
+}
+
+@keyframes roseFall{
+  to{transform:translateY(120vh);opacity:0;}
 }
 
 .floating-heart{
@@ -95,10 +105,6 @@ button{
   pointer-events:none;
 }
 
-@keyframes floatUp{
-  to{transform:translateY(-120vh);opacity:0;}
-}
-
 .confetti-piece{
   position:fixed;
   top:-20px;
@@ -106,14 +112,6 @@ button{
   height:12px;
   animation:fall linear forwards;
   pointer-events:none;
-}
-
-@keyframes fall{
-  to{transform:translateY(120vh) rotate(360deg);}
-}
-
-@keyframes roseFall{
-  to{transform:translateY(120vh);opacity:0;}
 }
 </style>
 </head>
@@ -124,16 +122,21 @@ button{
   <div class="card">
     <img src="envelope.png.jpg" width="220" onclick="openLetter()" style="cursor:pointer;">
     <h1>For Alya💗💌</h1>
-    <button class="yes pulse" onclick="openLetter()">Open</button>
+    <button class="yes" onclick="openLetter()">Open</button>
   </div>
 </div>
 
 <script>
 
 let heartInterval, confettiInterval, roseInterval;
-let currentPage = "question";
+let currentPage="start";
+let scrollHandlerAttached=false;
 
 function openLetter(){
+  currentPage="question";
+  document.body.style.overflow="hidden";
+  document.body.style.alignItems="center";
+
   document.getElementById("container").innerHTML=`
     <div class="card">
       <img id="mainPhoto" src="mainphoto.jpg">
@@ -164,8 +167,10 @@ function setupButtons(){
   let scale=1;
 
   noBtn.addEventListener("click",function(){
+
     if(index<messages.length){
-      noBtn.textContent=messages[index++];
+      noBtn.textContent=messages[index];
+      index++;
     }else{
       noBtn.textContent="Still no? 😭";
     }
@@ -182,8 +187,9 @@ function setupButtons(){
 }
 
 function loadFinalPage(){
-  currentPage="final";
 
+  currentPage="final";
+  document.body.style.background="linear-gradient(160deg,#ffb6d9,#ffd6eb)";
   document.body.style.overflowY="auto";
   document.body.style.alignItems="flex-start";
   window.scrollTo(0,0);
@@ -195,18 +201,24 @@ function loadFinalPage(){
       <img id="finalPhoto" src="finalphoto.jpg.jpg">
       <p style="color:white;font-weight:600;">Scroll down ↓</p>
     </div>
+    <div style="height:100vh;"></div>
   `;
 
   startHearts();
   startConfetti();
 
-  window.addEventListener("scroll", detectScrollToBouquet);
+  if(!scrollHandlerAttached){
+    window.addEventListener("scroll",handleScroll);
+    scrollHandlerAttached=true;
+  }
 }
 
-function detectScrollToBouquet(){
-  if(currentPage==="final" && window.scrollY > 120){
-    window.removeEventListener("scroll", detectScrollToBouquet);
+function handleScroll(){
+  if(currentPage==="final" && window.scrollY>180){
     loadBouquetPage();
+  }
+  if(currentPage==="bouquet" && window.scrollY<20){
+    loadFinalPage();
   }
 }
 
@@ -219,40 +231,31 @@ function loadBouquetPage(){
   document.querySelectorAll(".floating-heart,.confetti-piece").forEach(el=>el.remove());
 
   document.body.style.background="black";
+  document.body.style.alignItems="center";
   window.scrollTo(0,0);
 
   document.getElementById("container").innerHTML=`
-    <div style="padding:30px 20px 60px 20px;">
-
+    <div style="min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;padding:20px;">
       <h1 style="color:#ff4d9e;margin-bottom:10px;">
         Heres ur flowers (sorry there not real)❤️
       </h1>
 
-      <p style="color:#ff4d9e;margin-bottom:30px;">
+      <p style="color:#ff4d9e;margin-bottom:20px;">
         Scroll up ↑
       </p>
 
       <img id="bouquetImg"
            src="bouquet.jpg"
-           style="width:100%;max-width:450px;border-radius:25px;cursor:pointer;margin-top:10px;">
+           style="width:100%;max-width:450px;border-radius:25px;cursor:pointer;">
 
-      <p style="color:#ff4d9e;margin-top:25px;font-weight:600;">
+      <p style="color:#ff4d9e;margin-top:20px;font-weight:600;">
         Tap the letter 💌
       </p>
-
     </div>
   `;
 
-  document.getElementById("bouquetImg").addEventListener("click",openLoveLetter);
-
+  document.getElementById("bouquetImg").onclick=openLoveLetter;
   startRoseShower();
-
-  // 🔥 SCROLL UP GOES BACK TO FINAL PAGE (NOT RELOAD)
-  window.addEventListener("scroll", function(){
-    if(currentPage==="bouquet" && window.scrollY < 20){
-      loadFinalPage();
-    }
-  });
 }
 
 function startHearts(){
@@ -264,7 +267,7 @@ function startHearts(){
     heart.style.animationDuration=(5+Math.random()*2)+"s";
     document.body.appendChild(heart);
     setTimeout(()=>heart.remove(),7000);
-  },800);
+  },600);
 }
 
 function startConfetti(){
@@ -277,7 +280,7 @@ function startConfetti(){
     piece.style.animationDuration=(5+Math.random()*2)+"s";
     document.body.appendChild(piece);
     setTimeout(()=>piece.remove(),7000);
-  },800);
+  },700);
 }
 
 function startRoseShower(){
@@ -288,6 +291,7 @@ function startRoseShower(){
     rose.style.top="-30px";
     rose.style.left=Math.random()*100+"vw";
     rose.style.fontSize="22px";
+    rose.style.pointerEvents="none";
     rose.style.animation="roseFall 8s linear forwards";
     document.body.appendChild(rose);
     setTimeout(()=>rose.remove(),9000);
@@ -295,6 +299,7 @@ function startRoseShower(){
 }
 
 function openLoveLetter(){
+
   const overlay=document.createElement("div");
   overlay.style.position="fixed";
   overlay.style.top="0";
@@ -307,38 +312,43 @@ function openLoveLetter(){
   overlay.style.alignItems="center";
   overlay.style.zIndex="9999";
 
-  overlay.innerHTML=`
-    <div style="
-      width:90%;
-      max-width:450px;
-      background:#fff;
-      padding:40px 30px;
-      border-radius:20px;
-      border:8px solid #ff4d9e;
-      box-shadow:0 0 50px rgba(255,77,158,0.6);
-      font-family:'Playfair Display',serif;
-      color:#333;
-      position:relative;
-    ">
-      <div style="position:absolute;right:15px;top:10px;cursor:pointer;font-size:22px;font-weight:bold;"
-           onclick="this.parentElement.parentElement.remove()">
-        ✕
-      </div>
+  const letter=document.createElement("div");
+  letter.style.width="90%";
+  letter.style.maxWidth="450px";
+  letter.style.background="#fff";
+  letter.style.padding="40px 30px";
+  letter.style.borderRadius="20px";
+  letter.style.border="8px solid #ff4d9e";
+  letter.style.boxShadow="0 0 50px rgba(255,77,158,0.6)";
+  letter.style.fontFamily="'Playfair Display',serif";
+  letter.style.color="#333";
+  letter.style.position="relative";
 
-      <h2 style="color:#ff2e88;text-align:center;margin-bottom:20px;">
-        For You 💗
-      </h2>
-
-      <p style="line-height:1.7;font-size:17px;">
-        Dear Alya,<br><br>
-        (Write your real message here.)<br><br>
-        Love,<br>
-        Seif 💞
-      </p>
+  letter.innerHTML=`
+    <div id="closeBtn" style="position:absolute;right:15px;top:10px;cursor:pointer;font-size:22px;font-weight:bold;">
+      ✕
     </div>
+
+    <h2 style="color:#ff2e88;text-align:center;margin-bottom:20px;">
+      For You 💗
+    </h2>
+
+    <p style="line-height:1.7;font-size:17px;">
+      Dear Alya,<br><br>
+      (Write your real message here.)<br><br>
+      Love,<br>
+      Seif 💞
+    </p>
   `;
 
+  overlay.appendChildison is letter; // (This line was intentionally removed — ensuring no syntax error)
+
+  overlay.appendChild(letter);
   document.body.appendChild(overlay);
+
+  document.getElementById("closeBtn").onclick=()=>{
+    overlay.remove();
+  };
 }
 
 </script>
