--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@ body{
   padding:35px;
   border-radius:30px;
   box-shadow:0 20px 50px rgba(0,0,0,0.15);
-  position:relative;
 }
 
 h1{
@@ -57,7 +56,7 @@ button{
   font-size:18px;
   cursor:pointer;
   margin:5px;
-  transition:all 0.3s ease;
+  transition:0.3s ease;
 }
 
 .yes{
@@ -114,7 +113,6 @@ button{
 }
 </style>
 </head>
-
 <body>
 
 <div id="container">
@@ -164,7 +162,7 @@ function setupButtons(){
   let index=0;
   let scale=1;
 
-  noBtn.addEventListener("click",function(){
+  noBtn.onclick=function(){
     if(index<messages.length){
       noBtn.textContent=messages[index++];
     }else{
@@ -177,13 +175,14 @@ function setupButtons(){
     noBtn.style.position="absolute";
     noBtn.style.left=Math.random()*70+"%";
     noBtn.style.top=Math.random()*60+"%";
-  });
+  };
 
-  yesBtn.addEventListener("click",loadFinalPage);
+  yesBtn.onclick=loadFinalPage;
 }
 
 function loadFinalPage(){
   currentPage="final";
+
   document.body.style.background="linear-gradient(160deg,#ffb6d9,#ffd6eb)";
   document.body.style.overflowY="auto";
   document.body.style.alignItems="flex-start";
@@ -196,28 +195,26 @@ function loadFinalPage(){
       <img id="finalPhoto" src="finalphoto.jpg.jpg">
       <p style="color:white;font-weight:600;">Scroll down ↓</p>
     </div>
-    <div style="height:80vh;"></div>
+    <div style="height:120vh;"></div>
   `;
 
   startHearts();
   startConfetti();
 
-  window.onscroll=()=>{
-    if(currentPage==="final" && window.scrollY>150){
+  window.onscroll=function(){
+    if(currentPage==="final" && window.scrollY>250){
       loadBouquetPage();
-    }
-    if(currentPage==="bouquet" && window.scrollY<10){
-      loadFinalPage();
     }
   };
 }
 
 function loadBouquetPage(){
+
   currentPage="bouquet";
 
   clearInterval(heartInterval);
   clearInterval(confettiInterval);
-  document.querySelectorAll(".floating-heart,.confetti-piece").forEach(el=>el.remove());
+  document.querySelectorAll(".floating-heart,.confetti-piece").forEach(e=>e.remove());
 
   document.body.style.background="black";
   document.body.style.alignItems="flex-start";
@@ -225,7 +222,7 @@ function loadBouquetPage(){
 
   document.getElementById("container").innerHTML=`
     <div style="padding:40px 20px;">
-      <h1 style="color:#ff4d9e;">
+      <h1 style="color:#ff4d9e;margin-bottom:10px;">
         Heres ur flowers (sorry there not real)❤️
       </h1>
 
@@ -244,60 +241,63 @@ function loadBouquetPage(){
   `;
 
   document.getElementById("bouquetImg").onclick=openLoveLetter;
+
   startRoseShower();
+
+  window.onscroll=function(){
+    if(currentPage==="bouquet" && window.scrollY<20){
+      loadFinalPage();
+    }
+  };
 }
 
 function startHearts(){
   heartInterval=setInterval(()=>{
-    const heart=document.createElement("div");
-    heart.className="floating-heart";
-    heart.innerHTML="💖";
-    heart.style.left=Math.random()*100+"vw";
-    heart.style.animationDuration="6s";
-    document.body.appendChild(heart);
-    setTimeout(()=>heart.remove(),6000);
+    const h=document.createElement("div");
+    h.className="floating-heart";
+    h.innerHTML="💖";
+    h.style.left=Math.random()*100+"vw";
+    h.style.animationDuration="6s";
+    document.body.appendChild(h);
+    setTimeout(()=>h.remove(),6000);
   },700);
 }
 
 function startConfetti(){
   const colors=["#ff2e88","#ffffff","#ffb6d9"];
   confettiInterval=setInterval(()=>{
-    const piece=document.createElement("div");
-    piece.className="confetti-piece";
-    piece.style.left=Math.random()*100+"vw";
-    piece.style.backgroundColor=colors[Math.floor(Math.random()*colors.length)];
-    piece.style.animationDuration="6s";
-    document.body.appendChild(piece);
-    setTimeout(()=>piece.remove(),6000);
+    const c=document.createElement("div");
+    c.className="confetti-piece";
+    c.style.left=Math.random()*100+"vw";
+    c.style.backgroundColor=colors[Math.floor(Math.random()*colors.length)];
+    c.style.animationDuration="6s";
+    document.body.appendChild(c);
+    setTimeout(()=>c.remove(),6000);
   },800);
 }
 
 function startRoseShower(){
   roseInterval=setInterval(()=>{
-    const rose=document.createElement("div");
-    rose.innerHTML="🌹";
-    rose.style.position="fixed";
-    rose.style.top="-30px";
-    rose.style.left=Math.random()*100+"vw";
-    rose.style.fontSize="22px";
-    rose.style.pointerEvents="none";
-    rose.style.animation="roseFall 8s linear forwards";
-    document.body.appendChild(rose);
-    setTimeout(()=>rose.remove(),8000);
-  },1800);
+    const r=document.createElement("div");
+    r.innerHTML="🌹";
+    r.style.position="fixed";
+    r.style.top="-30px";
+    r.style.left=Math.random()*100+"vw";
+    r.style.fontSize="22px";
+    r.style.animation="roseFall 8s linear forwards";
+    document.body.appendChild(r);
+    setTimeout(()=>r.remove(),8000);
+  },1500);
 }
 
 function openLoveLetter(){
   const overlay=document.createElement("div");
   overlay.style.position="fixed";
-  overlay.style.top="0";
-  overlay.style.left="0";
-  overlay.style.width="100%";
-  overlay.style.height="100%";
+  overlay.style.inset="0";
   overlay.style.background="rgba(0,0,0,0.75)";
   overlay.style.display="flex";
-  overlay.style.justifyContent="center";
   overlay.style.alignItems="center";
+  overlay.style.justifyContent="center";
   overlay.style.zIndex="9999";
 
   const letter=document.createElement("div");
@@ -309,7 +309,6 @@ function openLoveLetter(){
   letter.style.border="8px solid #ff4d9e";
   letter.style.boxShadow="0 0 50px rgba(255,77,158,0.6)";
   letter.style.fontFamily="'Playfair Display',serif";
-  letter.style.color="#333";
   letter.style.position="relative";
 
   letter.innerHTML=`
