--- a/index.html
+++ b/index.html
@@ -82,7 +82,16 @@ button{
   50%{transform:scale(1.05);}
   100%{transform:scale(1);}
 }
+.pulse{
+  animation:pulse 1.6s infinite ease-in-out;
+}
 
+@keyframes pulse{
+  0%{transform:scale(1);}
+  50%{transform:scale(1.08);}
+  100%{transform:scale(1);}
+}
+  
 @keyframes floatUp{
   to{transform:translateY(-120vh);opacity:0;}
 }
@@ -119,7 +128,7 @@ button{
   <div class="card">
     <img src="envelope.png.jpg" width="220" onclick="openLetter()" style="cursor:pointer;">
     <h1>For Alya💗💌</h1>
-    <button class="yes" onclick="openLetter()">Open</button>
+    <button class="yes pulse" onclick="openLetter()">Open</button>
   </div>
 </div>
 
