--- a/index.html
+++ b/index.html
@@ -324,10 +324,18 @@ function openLoveLetter(){
     <div id="closeBtn" style="position:absolute;right:15px;top:10px;cursor:pointer;font-size:22px;font-weight:bold;">✕</div>
     <h2 style="color:#ff2e88;text-align:center;margin-bottom:20px;">For You 💗</h2>
     <p style="line-height:1.7;font-size:17px;">
-      Dear Alya,<br><br>
-      (Write your real message here.)<br><br>
+      To Alya,<br><br>
+     You acc mean so much to me alya ur
+     my bsf my wife nd the most beautiful
+     person ik i wish u could see urself the way
+     i see you u have no idea wallah how much i
+    love you your lwk my like my first valentine 
+    (if u said yes) nd idk if this was too little or to 
+    much but youll always be my valentine forever
+    i acc dk what im doing tbh or what to even say 
+    ur acc my goat nd i appretiate u smm i think yk that❤️💞<br><br>
       Love,<br>
-      Seif 💞
+      from the goat Seif 💞
     </p>
   `;
 
