--- a/index.html
+++ b/index.html
@@ -325,15 +325,17 @@ function openLoveLetter(){
     <h2 style="color:#ff2e88;text-align:center;margin-bottom:20px;">For You 💗</h2>
     <p style="line-height:1.7;font-size:17px;">
       To Alya,<br><br>
-     You acc mean so much to me alya ur
-     my bsf my wife nd the most beautiful
-     person ik i wish u could see urself the way
-     i see you u have no idea wallah how much i
+     Yo wsg guys hru idk how to start this its lwk my first time caring
+     but anw you acc mean so much to me alya ur
+     my bsf my wife nd the most amazing girl ik i 
+     wish u could see urself through my 
+     eyes nd the way i see u buddy u have no idea wallah how much i
     love you your lwk my like my first valentine 
-    (if u said yes) nd idk if this was too little or to 
-    much but youll always be my valentine forever
+    (if u said yes) nd its my first time doing this
+    so idk if this was too little or to 
+    much but youll always be my valentine forever from now
     i acc dk what im doing tbh or what to even say 
-    ur acc my goat nd i appretiate u smm i think yk that❤️💞<br><br>
+    ur acc my goat nd i appretiate u smm i think yk that goodbye❤️💞<br><br>
       Love,<br>
       from the goat Seif 💞
     </p>
