--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ScamLink😈</title>
+<title>ScamLink</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
@@ -164,7 +164,7 @@ function setupButtons(){
   const messages=[
     "Are you sure? 🥺",
     "Really sure??",
-    "Alya that’s kinda mean 😔",
+    "Alya that’s kinda rude 😔",
     "Think again...",
     "You dont love me",
     "Click it now"
@@ -177,7 +177,7 @@ function setupButtons(){
     if(index<messages.length){
       noBtn.textContent=messages[index++];
     }else{
-      noBtn.textContent="Still no? 😭";
+      noBtn.textContent="Thats enough say yes rn";
     }
 
     scale+=0.35;
@@ -325,17 +325,17 @@ function openLoveLetter(){
     <h2 style="color:#ff2e88;text-align:center;margin-bottom:20px;">For You 💗</h2>
     <p style="line-height:1.7;font-size:17px;">
       To Alya,<br><br>
-     Yo wsg guys hru idk how to start this its lwk my first time caring
+    idk how to start this its lwk my first time caring
      but anw you acc mean so much to me alya ur
-     my bsf my wife nd the most amazing girl ik i 
+     my bsf my wife nd the most amazing beautiful girl ik i 
      wish u could see urself through my 
-     eyes nd the way i see u buddy u have no idea wallah how much i
-    love you your lwk my like my first valentine 
+     eyes nd the way i see u nigger u have no idea wallah how much i
+    love you and care abt you ndb your lwk my first valentine 
     (if u said yes) nd its my first time doing this
-    so idk if this was too little or to 
+    so idk if this was too little or too 
     much but youll always be my valentine forever from now
     i acc dk what im doing tbh or what to even say 
-    ur acc my goat nd i appretiate u smm i think yk that goodbye❤️💞<br><br>
+    ur acc my goat nd i appretiate u smm i think yk that ❤️💞<br><br>
       Love,<br>
       from the goat Seif 💞
     </p>
